hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_top_pass_integer.php
<?php

$list = new SplDoublyLinkedList();
$list->push("top");
$list->top(45);

?>